<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_kufi_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/valuation_calculator"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/edt_xvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edt_custbg"
            android:fontFamily="@font/noto_kufi_bold"
            android:gravity="center"
            android:hint="@string/x"
            android:textColorHint="@color/black"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_yvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edt_custbg"
            android:fontFamily="@font/noto_kufi_bold"
            android:gravity="center"
            android:hint="@string/y"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/chk_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto_kufi_bold"
            android:hint="@string/_2112"
            android:textColorHint="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edt_custbgred"
            android:orientation="horizontal"
            android:padding="4dp"

            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/noto_kufi_bold"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="@color/black"
                android:textSize="26sp" />


            <TextView

                android:id="@+id/txt_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:fontFamily="@font/noto_kufi_bold"
                android:gravity="center"
                android:padding="6dp"
                android:textColor="@color/black"

                android:textSize="26sp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_getvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/noto_kufi_bold"
            android:text="@string/getvalue"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="24sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_linkedin"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="  Developed by Febin Rukfan"
        android:textColor="@color/blue"
        android:clickable="true"
        android:focusable="true"
        android:elevation="5dp"
        android:textSize="14sp"
        android:autoLink="web"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>